--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -22,9 +22,8 @@
 					<h2 id="SUB_TITLE">Powered by IIT</h2>
 				</div>
 			</div>
-
-			<body id="main">
-				<div id="topNav" class="row"></div>
+				<div id  = "main">
+				<div id="topNav"></div>
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="column">
@@ -102,8 +101,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="footer" class="row"></div>
-			</body>
+				</div>
 		</div>
 	</div>
 </body>
