--- a/src/main/resources/templates/navigationbar.html
+++ b/src/main/resources/templates/navigationbar.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div id="naviWrap" class="col-sm-12">
-		<nav class="navbar navbar-default navbar-inverse" role="navigation">
+		<nav class="navbar navbar-default" id="NAVBAR" role="navigation">
 			<div class="navbar-header">
 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -9,20 +9,24 @@
 				</button>
 
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
-					<ul class="nav navbar-nav">
+					<ul class="nav navbar-nav" id="NAVBAR_UL">
 						<li class="hidden"></li>
 						<li class="space"><a href="home.html">Home</a></li>
 						<li class="dropdown space"><a href="aboutus.html">About Us</a></li>
 						<li class="dropdown space"><a href="classes.html">Classes</a></li>
-						<li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Tests<b class="caret"></b></a>
+						<li class="dropdown space"><a href="tests.html">Tests</a></li>
+						<!-- <li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Tests<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="login.html">Online Tests</a></li>
 								<li><a href="#testseries.html">Test Series</a></li>
 
-							</ul></li>
-						<li class="dropdown space"><a href="material.html" class="dropdown=toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
+							</ul></li> -->
+						
+						<li class="dropdown space"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="previouspapers.html">Previous Papers</a></li>
+								  <li class= "DROPDOWN"><a href = "material.html">Material</a></li>
+  								   <li class = "DROPDOWN"><a href = "previousPapers.html">Previous Papers</a></li>
+
 
 							</ul></li>
 						<li class="space"><a href="contactus">Contact Us</a></li>
