--- a/src/main/resources/templates/previouspapers.html
+++ b/src/main/resources/templates/previouspapers.html
@@ -10,6 +10,7 @@
 <link href="lib/css/bootstrap.min.css" rel="stylesheet">
 <link href="app/css/classmate.css" rel="stylesheet">
 </head>
+<body>
 <div id="wrap">
 	<div id="main-entire" class="container">
 		<div id="top" class="row">
@@ -19,10 +20,10 @@
 				<h2 id="SUB_TITLE">Powered by IIT</h2>
 			</div>
 		</div>
-
+	<div id = "main">
 		<div class="row">
 			<div id="topNav"></div>
-				      <div id = "main">
+				      
 
                           <div class = "row">
 
@@ -68,6 +69,7 @@
                        </div>
                      </div>
 		</div>
+		</body>
 
 
 		<script src="js/jquery-1.11.3.min.js"></script>
