--- a/src/main/resources/templates/classes.html
+++ b/src/main/resources/templates/classes.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classmate</title>
 
-<link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css"
+	href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/classmate.css" />
 </head>
 <style>
@@ -15,30 +16,76 @@ tbody td {
 	color: black;
 }
 </style>
-<div id="wrap">
-	<div id="main-entire" class="container">
-		<div id="top" class="row">
-			<div class="col-sm-4">logo</div>
-			<div class="col-sm-6">
-				<h1 id="SITE_NAME">CLASSMATE ACADEMY</h1>
-				<h2 id="SUB_TITLE">Powered by IIT</h2>
+<body>
+	<div id="wrap">
+		<div id="main-entire" class="container">
+			<div id="top" class="row">
+				<div class="col-sm-4">logo</div>
+				<div class="col-sm-6">
+					<h1 id="SITE_NAME">CLASSMATE ACADEMY</h1>
+					<h2 id="SUB_TITLE">Powered by IIT</h2>
+				</div>
 			</div>
-		</div>
 
-		<div class="row">
-			<div id="topNav"></div>
 			<div id="main">
+				<div id="topNav"></div>
+
 				<div class="row">
 					<div class="col-sm-9">
 						<div class="column">
 							<div id="LIVE_CLASSES">
 
 								<div class="row">
-									<div class="col-sm-4">Online Live Classes for SSC CGL
-										Tier I</div>
-									<div class="col-sm-4">Online Live Classes for SSC CGL
-										Tier II</div>
-									<div class="col-sm-4">Online Live Classes for SSC CHSL</div>
+									<div class="col-sm-4">
+										<h5>Online Live Classes for SSC CGLTier I</h5>
+										<p>Course Duration : 4 Months</p>
+										<p>Number of hours : 220Hrs</p>
+										<p>Fee : 7000/-</p>
+										<p>Timings: Starting date 11.12.2015</p>
+										<p>Each class is 2:30 Hrs duration.(9:00 - 11:30 pm)</p>
+										<p align="justify">Material: Classwork and assignment
+											sheets will be couriered. (The required material for
+											classwork is sent by post. Students should send the residence
+											address well before the commencement of the class)</p>
+										<p align="justify">Test series: Online Test Series can be
+											availed at the nominal cost. Registered students for Online
+											Classes can attend the live online doubt session and
+											discussion of the exam paper.</p>
+									</div>
+									<div class="col-sm-4">
+										<h5>Online LIVE Classes for SSC CGL Tier II 2015</h5>
+										<p>Course Duration: 40 Days</p>
+										<p>Number of Hours: >110 Hrs</p>
+										<p>Fee: 5000/-</p>
+										<p>Timings: Starting date 31.08.2015.</p>
+										<p>Each class is 2:30 Hrs duration.(9:00 - 11:30 pm)</p>
+										<p align="justify">Material :Daily classwork and
+											assignment sheets will be mailed.</p>
+										<p align="justify">Test series: Online Test Series can be
+											availed at the nominal cost. Registered students for Online
+											Classes can attend the live online doubt session and
+											discussion of the exam paper. There will be 20 exams based on
+											the pattern of SSC CGL. Special doubt sessions are integral
+											to the course structure.</p>
+									</div>
+									<div class="col-sm-4">
+										<h5>Online LIVE Classes for SSC CHSL 2016</h5>
+										<p>Course Duration: 4 Months</p>
+										<p>Number of Hours: >220 Hrs</p>
+										<p>Fee: 7000/-</p>
+										<p>Timings: Starting date 11.12.2015.</p>
+										<p>Each class is 2:30 Hrs duration.(9:00 - 11:30 pm)</p>
+										<p align="justify">Material: Classwork and assignment
+											sheets will be couriered. (The required material for
+											classwork is sent by post. Students should send the residence
+											address well before the commencement of the class)</p>
+										<p align="justify">Test series: Online Test Series can be
+											availed at the nominal cost. Registered students for Online
+											Classes can attend the live online doubt session and
+											discussion of the exam paper.</p>
+
+
+									</div>
 								</div>
 							</div>
 
@@ -99,9 +146,8 @@ tbody td {
 							<div id="NEW_BATCHES_DIV" style="display: none;">
 								<div class="row">
 									<div class="col-sm-12">
-										<table id="BATCHES_TABLE"
-											class="table table-striped table-bordered" cellspacing="0"
-											width="100%">
+										<table id="BATCHES_TABLE" class="table table-bordered"
+											cellspacing="0" width="100%">
 											<thead>
 												<tr>
 													<th>Batch</th>
@@ -122,16 +168,14 @@ tbody td {
 												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015</td>
-													<td>English only grammar 6:30-8:30am
-													</td>
+													<td>English only grammar 6:30-8:30am</td>
 													<td>Ashok Nagar</td>
 													<td>16.09.2015</td>
 													<td>6.10.2015</td>
 												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015</td>
-													<td>Arithmetic 10:30am - 1:30am 6:30-8:30am
-													</td>
+													<td>Arithmetic 10:30am - 1:30am 6:30-8:30am</td>
 													<td>Ashok Nagar</td>
 													<td>13.09.2015</td>
 													<td>2.10.2015</td>
@@ -159,34 +203,30 @@ tbody td {
 												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm &nbsp;
-														6:00-9:00 pm
-													</td>
+													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm
+														&nbsp; 6:00-9:00 pm</td>
 													<td>Ashok Nagar</td>
 													<td>28.08.2015</td>
 													<td>03.10.2015</td>
 												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm &nbsp;
-														6:00-9:00 pm
-													</td>
+													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm
+														&nbsp; 6:00-9:00 pm</td>
 													<td>DilsukhNagar</td>
 													<td>29.08.2015</td>
 													<td>04.10.2015</td>
 												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 2:30-5:30 pm Sunday:2:30-5:30 pm &nbsp;
-														6:00-9:00 pm
-													</td>
+													<td>Monday-Saturday 2:30-5:30 pm Sunday:2:30-5:30 pm
+														&nbsp; 6:00-9:00 pm</td>
 													<td>Ashok Nagar</td>
 													<td>28.08.2015</td>
 													<td>03.10.2015</td>
 												</tr>
 												<tr>
-													<td>SSC CGL Tier II Statistical Investigator
-													</td>
+													<td>SSC CGL Tier II Statistical Investigator</td>
 													<td>Monday-Saturday 6:00-9:00 pm</td>
 													<td>Ashok Nagar</td>
 													<td>05.09.2015</td>
@@ -233,16 +273,16 @@ tbody td {
 
 				<div></div>
 
-</div>
-</div>
-</div>
-</div>
+			</div>
+		</div>
+	</div>
+</body>
 
-				<script src="js/jquery-1.11.3.min.js"></script>
-				<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-				<script src="app/js/classes.js"></script>
-				<script src="app/js/loadfooter.js"></script>
-				<script th:inline="javascript">
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+<script src="app/js/classes.js"></script>
+<script src="app/js/loadfooter.js"></script>
+<script th:inline="javascript">
     var footer = [[${footer}]];
   $(document).ready(function() {
 	  jQuery.get("navigationbar.html", function(data){
