--- a/src/main/resources/templates/contactus.html
+++ b/src/main/resources/templates/contactus.html
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/classmate.css" />
+<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type="text/css"/>
 </head>
 <style>
 .map {
@@ -22,6 +23,7 @@
 	color: #000000;
 }
 </style>
+<body>
 <div id="wrap">
 	<div id="main-entire" class="container">
 		<div id="top" class="row">
@@ -31,12 +33,11 @@
 				<h2 id="SUB_TITLE">Powered by IIT</h2>
 			</div>
 		</div>
-
-		<div class="row">
+	<div id="main">
 			<div id="topNav"></div>
 
 
-			<div id="main">
+			
 				<div class="column">
 					<div class="row">
 						<div class="col-sm-8">
@@ -124,11 +125,12 @@
 							</div>
 						</div>
 					</div>
+					<div id="footer" class="row"></div>
 				</div>
-			</div>
 		</div>
 		</div>
 		</div>
+		</body>
 		
 
 		<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
