--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 <title>Classmate</title>
 <link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/classmate.css" />
+<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type="text/css"/>
 </head>
 <body>
 	<div id="wrap">
@@ -19,8 +20,8 @@
 					<h2 id="SUB_TITLE">Powered by IIT</h2>
 				</div>
 			</div>
-			<body id="main">
-				<div id="topNav" class="row"></div>
+				<div id = "main">
+				<div id = "topNav"></div>
 				<div class="row">
 					<div class="col-sm-9">
 						<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -31,13 +32,13 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="item active">
-									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" />
 								</div>
 								<div class="item">
-									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" />
 								</div>
 								<div class="item">
-									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" />
 								</div>
 							</div>
 
@@ -108,7 +109,6 @@
 								<div class="column">
 									<h4>Results</h4>
 									<div id="main_results" />
-
 									
 								</div>
 							</div>
@@ -124,15 +124,18 @@
 					</div>
 
 				</div>
-			</body>
 			<div id="footer" class="row"></div>
+			</div>
 		</div>
 	</div>
 </body>
 
 
 
-<script src="js/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.easing.min.js"></script>
+<script type="text/javascript" src="js/jquery.easy-ticker.js"></script>
+
 <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 <script src="app/js/home.js"></script>
 <script src="app/js/loadfooter.js"></script>
