--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -10,6 +10,7 @@
 <link href="lib/css/bootstrap.min.css" rel="stylesheet">
 <link href="app/css/classmate.css" rel="stylesheet">
 </head>
+<body>
 <div id="wrap">
 	<div id="main-entire" class="container">
 		<div id="top" class="row">
@@ -20,12 +21,12 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div id="main">
 			<div id="topNav"></div>
 
 
 
-			<div id="main">
+			
 
 				<div class="row">
 
@@ -69,6 +70,7 @@
 
 			</div>
 		</div>
+		</body>
 
 
 		<script src="js/jquery-1.11.3.min.js"></script>
