--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@ input[type=radio] {
 }
 
 body {
-	background: url(img/registration-bg.jpg) no-repeat center center
+	background: url(img/wallpaper.jpg) no-repeat center center
 		fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -27,7 +27,7 @@ body {
 }
 
 .well {
-	background-color: rgba(245, 245, 245, 0.7);
+	 background-color: rgba(204,229,255, 0.5);
 }
 </style>
 <body>
