--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classmate</title>
 
-<link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="css/dashboard.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/dashboard.css" />
 </head>
 
 <body>
@@ -19,16 +19,13 @@
 		<!-- Sidebar -->
 		<div id="sidebar-wrapper">
 			<ul id="sidebar_menu" class="sidebar-nav">
-				<li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span
-						id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+				<li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span id="main_icon"
+						class="glyphicon glyphicon-align-justify"></span></a></li>
 			</ul>
 			<ul class="sidebar-nav" id="sidebar">
-				<li id="DASHBOARD"><a href="#"> Dashboard<span
-						class="glyphicon glyphicon-dashboard"></span></a></li>
-				<li id="PROFILES"><a href="#"> Profile<span id="GLYPH_ICON"
-						class="glyphicon glyphicon-user"></span></a></li>
-				<li id="TESTS"><a href="#"> Tests<span id="GLYPH_ICON"
-						class="glyphicon glyphicon-pencil"></span></a></li>
+				<li id="DASHBOARD"><a href="#"> Dashboard<span class="glyphicon glyphicon-dashboard"></span></a></li>
+				<li id="PROFILES"><a href="#"> Profile<span id="GLYPH_ICON" class="glyphicon glyphicon-user"></span></a></li>
+				<li id="TESTS"><a href="#"> Tests<span id="GLYPH_ICON" class="glyphicon glyphicon-pencil"></span></a></li>
 			</ul>
 		</div>
 
@@ -36,38 +33,28 @@
 		<div id="page-content-wrapper">
 			<!-- Keep all page content within the page-content inset div! -->
 			<div class="page-content inset">
-				<nav class="navbar navbar-fixed-top navbar-inverse" id="HEADER"
-					role="navigation">
+				<nav class="navbar navbar-fixed-top navbar-inverse" id="HEADER" role="navigation">
 					<div class="container-fluid">
-						<a class="navbar-brand" id="NAVBAR_HEADING" href="#">CLASSMATE
-							ACADEMY</a>
+						<a class="navbar-brand" id="NAVBAR_HEADING" href="#">CLASSMATE ACADEMY</a>
 						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed"
-								data-toggle="collapse" data-target=".navbar-ex1-collapse">
-								<span class="sr-only">Toggle navigation</span> <span
-									class="icon-bar"></span> <span class="icon-bar"></span> <span
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+								<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
 									class="icon-bar"></span>
 							</button>
 
 						</div>
-						<div id="navbar"
-							class="collapse navbar-collapse navbar-ex1-collapse"
-							style="height: 1px;">
+						<div id="navbar" class="collapse navbar-collapse navbar-ex1-collapse" style="height: 1px;">
 							<ul class="nav navbar-right top-nav">
 
-								<li class="dropdown"><a href="#" class="dropdown-toggle"
-									id="USER_LOGOUT" data-toggle="dropdown" aria-expanded="true">
+								<li class="dropdown"><a href="#" class="dropdown-toggle" id="USER_LOGOUT" data-toggle="dropdown" aria-expanded="true">
 										Name <b class="caret"></b>
 								</a>
 									<ul class="dropdown-menu">
-										<li><a href="#" id="PROFILE_USER"><span
-												class="glyphicon glyphicon-user"></span>Profile</a></li>
-										<li><a href="aboutUs.html"><span
-												class="glyphicon glyphicon-open"></span>About Us</a></li>
+										<li><a href="#" id="PROFILE_USER"><span class="glyphicon glyphicon-user"></span>Profile</a></li>
+										<li><a href="aboutUs.html"><span class="glyphicon glyphicon-open"></span>About Us</a></li>
 
 										<li class="divider"></li>
-										<li><a href="#"><span
-												class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
+										<li><a href="#"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
 									</ul></li>
 							</ul>
 						</div>
@@ -84,8 +71,7 @@
 										<section class="test schedule">
 											<h3 id="TITLE">Test Schedule</h3>
 											<div id="TEST_SCHEDULE_TABLE">
-												<table class="table table-bordered" cellspacing="0"
-													width="100%">
+												<table class="table table-bordered" cellspacing="0" width="100%">
 													<thead>
 														<tr>
 															<th>Test name</th>
@@ -99,16 +85,14 @@
 															<td>Tier-I Test 2</td>
 															<td></td>
 															<td></td>
-															<td><a href="#">Take Test <span id="GLYPH_ICON"
-																	class="glyphicon glyphicon-play-circle"></span></a></td>
+															<td><a href="#">Take Test <span id="GLYPH_ICON" class="glyphicon glyphicon-play-circle"></span></a></td>
 
 														</tr>
 														<tr>
 															<td>Tier-I Test 1</td>
 															<td></td>
 															<td></td>
-															<td><a href="#">Take Test <span id="GLYPH_ICON"
-																	class="glyphicon glyphicon-play-circle"></span></a></td>
+															<td><a href="#">Take Test <span id="GLYPH_ICON" class="glyphicon glyphicon-play-circle"></span></a></td>
 														</tr>
 													</tbody>
 												</table>
@@ -117,8 +101,7 @@
 									</div>
 									<div class="col-sm-6">
 										<div id="TOTAL_TEST_DIV">
-											<table class="table table-bordered" cellspacing="0"
-												width="100%">
+											<table class="table table-bordered" cellspacing="0" width="100%">
 												<thead>
 													<tr>
 														<th>Total Tests</th>
@@ -154,8 +137,7 @@
 										<section class="test series">
 											<h3 id="TITLE">Test Series</h3>
 											<div id="TEST_SERIES_TABLE">
-												<table class="table table-bordered" cellspacing="0"
-													width="100%">
+												<table class="table table-bordered" cellspacing="0" width="100%">
 													<thead>
 														<tr>
 															<th>S.no</th>
@@ -173,8 +155,7 @@
 															<td>20</td>
 															<td>7-10-2015</td>
 															<td>31-12-2015</td>
-															<td><a href="#" id="BUY_TEST">Buy Test Series <span
-																	id="GLYPH_ICON"
+															<td><a href="#" id="BUY_TEST">Buy Test Series <span id="GLYPH_ICON"
 																	class="glyphicon glyphicon-shopping-cart"></span></a></td>
 														</tr>
 														<tr>
@@ -183,8 +164,7 @@
 															<td>6</td>
 															<td>1-8-2015</td>
 															<td>31-12-2015</td>
-															<td><a href="#" id="BUY_TEST">Buy Test Series <span
-																	id="GLYPH_ICON"
+															<td><a href="#" id="BUY_TEST">Buy Test Series <span id="GLYPH_ICON"
 																	class="glyphicon glyphicon-shopping-cart"></span></a></td>
 														</tr>
 													</tbody>
@@ -203,8 +183,7 @@
 										<section class="test status">
 											<h3 id="TITLE">Test Status</h3>
 											<div id="TEST_STATUS_TABLE">
-												<table class="table table-bordered" cellspacing="0"
-													width="100%">
+												<table class="table table-bordered" cellspacing="0" width="100%">
 													<thead>
 														<tr>
 															<th>S.no</th>
@@ -239,8 +218,7 @@
 										<section class="test schedule">
 											<h3 id="TITLE">Tests</h3>
 											<div id="TEST_TABLE">
-												<table class="table table-bordered" cellspacing="0"
-													width="100%">
+												<table class="table table-bordered" cellspacing="0" width="100%">
 													<thead>
 														<tr>
 															<th>S.No</th>
@@ -257,26 +235,22 @@
 														<tr>
 															<td>1</td>
 															<td>Tier-I Test 2</td>
-															<td>Free Test-2 All solutions are not available in
-																free tests</td>
+															<td>Free Test-2 All solutions are not available in free tests</td>
 															<td>200</td>
 															<td>02:00:00</td>
 															<td></td>
 															<td></td>
-															<td><a href="#">Take Test <span id="GLYPH_ICON"
-																	class="glyphicon glyphicon-play-circle"></span></a></td>
+															<td><a href="#">Take Test <span id="GLYPH_ICON" class="glyphicon glyphicon-play-circle"></span></a></td>
 														</tr>
 														<tr>
 															<td>2</td>
 															<td>Tier-I Test 1</td>
-															<td>Free Test-1 All solutions are not available in
-																free tests</td>
+															<td>Free Test-1 All solutions are not available in free tests</td>
 															<td>200</td>
 															<td>02:00:00</td>
 															<td></td>
 															<td></td>
-															<td><a href="#">Take Test <span id="GLYPH_ICON"
-																	class="glyphicon glyphicon-play-circle"></span></a></td>
+															<td><a href="#">Take Test <span id="GLYPH_ICON" class="glyphicon glyphicon-play-circle"></span></a></td>
 														</tr>
 													</tbody>
 												</table>
@@ -308,10 +282,8 @@
 													<div class="panel-body" id="PANEL_BODY">
 														<div class="row">
 															<div class="col-sm-3" align="center">
-																<img id="Picture" alt="User Pic" data-src="#"
-																	class="img-circle img-responsive"> <input
-																	type='file' id="imgInp" accept="image/*"
-																	style="display: none" />
+																<img id="Picture" alt="User Pic" data-src="#" class="img-circle img-responsive"> <input type='file'
+																	id="imgInp" accept="image/*" style="display: none" />
 																<button type="button" id="click_me">Upload</button>
 
 															</div>
@@ -371,8 +343,7 @@
 
 																		<div class="row">
 																			<div class="col-sm-6">
-																				<label>Registration Date</label> <input
-																					type="number" />
+																				<label>Registration Date</label> <input type="number" />
 																			</div>
 																			<div class="col-sm-6">
 																				<label>Enrollment Number</label> <input type="text" />
