--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -2,48 +2,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classmate</title>
-
-<link href="lib/css/bootstrap.min.css" rel="stylesheet">
-<link href="app/css/classmate.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/classmate.css" />
 </head>
 <body>
-<div id="wrap">
-	<div id="main-entire" class="container">
-		<div id="top" class="row">
-			<div class="col-sm-4">logo</div>
-			<div class="col-sm-6">
-				<h1 id="SITE_NAME">CLASSMATE ACADEMY</h1>
-				<h2 id="SUB_TITLE">Powered by IIT</h2>
+	<div id="wrap">
+		<div id="main-entire" class="container">
+			<div id="top" class="row">
+				<div class="col-sm-4">logo</div>
+				<div class="col-sm-6">
+					<h1 id="SITE_NAME">CLASSMATE ACADEMY</h1>
+					<h2 id="SUB_TITLE">Powered by IIT</h2>
+				</div>
 			</div>
-		</div>
-
-		<div id="main">
-			<div id="topNav"></div>
-
-
-
-			
-
+			<div id="main">
+				<div id="topNav"></div>
 				<div class="row">
-
 					<div class="col-sm-9">
 						<div class="column">
 							<div id="MATERIAL_DIV">Material content goes here</div>
-
-
 						</div>
-
-
-
 					</div>
-
 					<div class="col-sm-3">
 						<div class="column">
-
 							<div id="GENERAL_AWARENESS">
 								<h4>General Awareness</h4>
 								<ul id="GA-LINKS">
@@ -60,24 +45,21 @@
 									<li><a href="#" target="_blank">​SCIENCE-2</a></li>
 									<li><a href="#" target="_blank">​ENGLISH</a></li>
 									<li><a href="#" target="_blank">​IDIOMS AND PHRASES</a></li>
-									<li><a href="#" target="_blank">​ONE WORD
-											SUBSTITUTIONS</a></li>
+									<li><a href="#" target="_blank">​ONE WORD SUBSTITUTIONS</a></li>
 								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
-		</body>
-
-
-		<script src="js/jquery-1.11.3.min.js"></script>
-		<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-		<script src="app/js/material.js"></script>
-		<script src="app/js/loadfooter.js"></script>
-		<script th:inline="javascript">
+	</div>
+</body>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+<script src="app/js/material.js"></script>
+<script src="app/js/loadfooter.js"></script>
+<script th:inline="javascript">
     var footer = [[${footer}]];
   $(document).ready(function() {
 	  jQuery.get("navigationbar.html", function(data){
