--- a/src/main/resources/templates/navigationbar.html
+++ b/src/main/resources/templates/navigationbar.html
@@ -12,9 +12,9 @@
 					<ul class="nav navbar-nav" id="NAVBAR_UL">
 						<li class="hidden"></li>
 						<li class="space"><a href="home.html">Home</a></li>
-						<li class="dropdown space"><a href="aboutus.html">About Us</a></li>
-						<li class="dropdown space"><a href="classes.html">Classes</a></li>
-						<li class="dropdown space"><a href="tests.html">Tests</a></li>
+						<li class="dropdown space"><a href="aboutus">About Us</a></li>
+						<li class="dropdown space"><a href="classes">Classes</a></li>
+						<li class="dropdown space"><a href="tests">Tests</a></li>
 						<!-- <li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Tests<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="login.html">Online Tests</a></li>
@@ -24,8 +24,8 @@
 						
 						<li class="dropdown space"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								  <li class= "DROPDOWN"><a href = "material.html">Material</a></li>
-  								   <li class = "DROPDOWN"><a href = "previousPapers.html">Previous Papers</a></li>
+								  <li class= "DROPDOWN"><a href = "material">Material</a></li>
+  								   <li class = "DROPDOWN"><a href = "previouspapers">Previous Papers</a></li>
 
 
 							</ul></li>
